# ecrp_cpp

./: .gitignore  CMakeLists.txt  GameState.cpp  GameState.hpp  IState.cpp  IState.hpp  MainMenuState.cpp  MainMenuState.hpp  PauseState.cpp  PauseState.hpp  README.md  SplashState.cpp  SplashState.hpp  StateManager.cpp  StateManager.hpp  config.cpp  config.hpp  game.sln  game.vcxproj  game.vcxproj.filters  main.cpp  vcpkg.json
game/x64/Debug/: CodeAnalysisResultManifest.txt  config.obj.enc  game.exe.recipe  main.nativecodeanalysis.sarif  main.obj.enc  vc143.idb
game/x64/Debug/game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyFile.command.1.tlog  CopyFile.read.1.tlog  CopyFile.write.1.tlog  game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
game/x64/Release/: game.exe.recipe  game.iobj  game.ipdb
game/x64/Release/game.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
notes/: biome_plans.txt
pyProj/: ContainerWithMostWater.py  Determines if this terrain object is con.md  NumberOfIslands.py  OdysseyMission_GridOmega.py  ParenthesisMap.py  SumOfTwo.py  Xylos_Expedition.ipynb  chartinGridSectorDelta.ipynb  chunkgeneration.md  climbingStairs.py  grid&objects.ipynb  inslandtest.py  refine.py  test.py  tree-traverse.py  vs.ps1
res/text/: guide.txt
src/: chunkManager.cpp  config.cpp  config.hpp  main.cpp  playerManager.cpp
src/headers/: chunkManager.hpp  config.hpp  playerManager.hpp
